--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
-    <div class="container"><a class="navbar-brand">Solution</a>
+    <div class="container"><a class="navbar-brand">ArthanitiX</a>
         <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"><span
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
@@ -465,7 +465,7 @@
                         </ul>
                     </div>
                     <div class="col-12">
-                        <p>&copy; 2019. All Rights Reserved. Design by <a href="https://gettemplates.co" target="_blank">GetTemplates</a>.</p>
+                        <p>&copy; 2024-25. All Rights Reserved. Design by <a href="https://rajxxs.github.io/" target="_blank">Major Priyanshu</a>.</p>
                     </div>
                 </div>
             </div>
